# devops-study-app

./: .pre-commit-config.yaml  mise.toml
.github/workflows/: backend-tests.yaml
scripts/: setup  setup_project
src/backend/: Dockerfile  coverage.xml  pyproject.toml
src/backend/src/data/: sessions.csv
src/frontend/: Dockerfile  README.md  pyproject.toml
